Swagger rest api integration
