# GoRestAPI/app.go
@@ -8,13 +8,11 @@ import (
 	"net/http"
 	"strconv"
 
-	_ "github.com/AndreasRoither/Snippets/GoRestApi/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
 	"github.com/go-chi/cors"
 	"github.com/go-chi/render"
 	_ "github.com/lib/pq"
-	httpSwagger "github.com/swaggo/http-swagger" // http-swagger middleware
 )
 
 // App struct with router and db specification
@@ -66,14 +64,13 @@ func (a *App) initializeRoutes() {
 		r.Get("/", getWelcomeMessage)
 	})
 
+	a.Router.Route("/swagger", func(r chi.Router) {
+		r.Get("/", serveSwagger)
+	})
+
 	a.Router.Route("/login", func(r chi.Router) {
 		r.Post("/", loginUser)
 	})
-
-	// Swagger
-	a.Router.Get("/swagger/*", httpSwagger.Handler(
-		httpSwagger.URL("http://localhost:8010/swagger/doc.json"), //The url pointing to API definition"
-	))
 
 	// route: /users
 	a.Router.Route("/users", func(r chi.Router) {
@@ -200,7 +197,7 @@ func getUserSnippet(user User, snippetID string) Snippet {
 	//   type: string
 	// responses:
 	//   '200':
-	//     description: snippet response
+	//     "$ref": "#/responses/Snippet"
 	//     type: json
 	for _, snippet := range user.Snippets {
 		if snippet.ID == snippetID {
@@ -208,6 +205,11 @@ func getUserSnippet(user User, snippetID string) Snippet {
 		}
 	}
 	return Snippet{}
+}
+
+func swagger(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	http.ServeFile(w, r, "swagger.json")
 }
 
 // GET - Request
